# AgentGraph

./: .gitignore  LICENSE  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml
agentgraph/: __init__.py  async_memory_sync.py  autonomy_tools.py  checkpointing.py  contracts.py  demo.py  desktop_demo.py  desktop_enforcement.py  desktop_loader.py  env.py  memory_adapters.py  observability.py  openai_adapter.py  planner_adapter.py  roster_loader.py  runtime.py  schema_evolution.py  starter_agents.py  tool_caching.py  validator_adapter.py
agentgraph/config/: __init__.py  agents.yaml
agentgraph/config/agents/: desktop_executor.yaml
agentgraph/config/policies/: desktop_policies.yaml
agentgraph/config/tools/: desktop_tools.yaml
agentgraph/config/workflows/: autonomous_desktop_loop.yaml
docs/: architecture.md  index.md  public-api.md  release-artifacts.md
examples/: run_openai_demo.py  show_agents.py  streamlit_app.py
tests/: test_mvp.py
